# avahi-subdomains

./: .gitignore  Cargo.toml  LICENSE  flake.nix  treefmt.nix
nix/: module.nix  package.nix
src/: avahi.rs  main.rs
